[workspace]
members = ["packages/*", "contracts/*"]

[workspace.package]
version       = "0.16.0"
edition       = "2021"
license       = "Apache-2.0"
repository    = "https://github.com/CosmWasm/cw-nfts"
homepage      = "https://cosmwasm.com"
documentation = "https://docs.cosmwasm.com"

[workspace.dependencies]
cosmwasm-schema = { git = "https://github.com/finschia/cosmwasm", tag = "v1.1.9-0.7.0-dynamiclink1" }
cosmwasm-std    = { git = "https://github.com/finschia/cosmwasm", tag = "v1.1.9-0.7.0-dynamiclink1" }
cw2             = { git = "https://github.com/dudong2/cw-plus", branch = "dynamic_link" }
cw20            = { git = "https://github.com/dudong2/cw-plus", branch = "dynamic_link" }
cw721           = { version = "0.16.0", path = "./packages/cw721" }
cw721-base      = { version = "0.16.0", path = "./contracts/cw721-base" }
cw-storage-plus = { git = "https://github.com/dudong2/cw-storage-plus", branch = "dynamic_link" }
cw-utils        = { git = "https://github.com/dudong2/cw-utils", branch = "dynamic_link" }
schemars        = "0.8.10"
serde           = { version = "1.0.140", default-features = false, features = ["derive"] }
thiserror       = "1.0.31"

[profile.release.package.cw721-base]
codegen-units = 1
incremental = false

[profile.release.package.cw721-metadata-onchain]
codegen-units = 1
incremental = false

[profile.release.package.cw721-fixed-price]
codegen-units = 1
incremental = false

[profile.release.package.cw721-non-transferable]
codegen-units = 1
incremental = false

[profile.release]
rpath = false
lto = true
overflow-checks = true
opt-level = 3
debug = false
debug-assertions = false
